--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Venue - Cosmetics</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="/contents/logo.png" />
+    <link rel="stylesheet" href="https://p1-web.github.io/prova-p1/css/style.css">
+    <link rel="icon" href="https://p1-web.github.io/prova-p1/contents/logo.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
 <body>
@@ -71,11 +71,11 @@
         <div class="footer">
             <p>Politicas de privacidade  |  Termos de uso</p>
             <div>
-                <img  src="/contents/icons8-facebook-48.png" style="filter: invert(100%)">
+                <img  src="https://p1-web.github.io/prova-p1/contents/icons8-facebook-48.png" style="filter: invert(100%)">
             
-                <img src="/contents/icons8-instagram-80.png" style="filter: invert(100%)">
+                <img src="https://p1-web.github.io/prova-p1/contents/icons8-instagram-80.png" style="filter: invert(100%)">
             
-                <img src="/contents/icons8-twitter-80.png" style="filter: invert(100%)">
+                <img src="https://p1-web.github.io/prova-p1/contents/icons8-twitter-80.png" style="filter: invert(100%)">
             </div>
         </div>
       </div>
