--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
         </div>
         <div class="main">
             <div class="sub-container">
-                <img src="/contents/mocahome.png" class="resposiveIMG">
+                <img src="https://p1-web.github.io/prova-p1/contents/mocahome.png" class="resposiveIMG">
                 <div class="sub-container">
                     <div class="sub">
                         <p class="title">Descubra a sua nova versão!</p>
@@ -41,13 +41,13 @@
                     <h1>MAIS VENDIDOS</h1>
                 </div>
                 <div class="bloco1">
-                    <img src="contents/shampoconditioner.png" alt="">
+                    <img src="/https://p1-web.github.io/prova-p1/contents/shampoconditioner.png" alt="">
                     <h3>Kit shampoo + condicionador </h3>
                     <p>O cuidado ideal para se ter com sua pele está nessa combinação poderosa. Um creme acetinado e um body splash produzidos com a melhor formulação do mercado.
                     </p>
                 </div>
                 <div class="bloco2">
-                    <img src="contents/facialcream.png" alt="">
+                    <img src="https://p1-web.github.io/prova-p1/contents/facialcream.png" alt="">
                     <h3>Creme facial com ácido hialurônico </h3>
                     <p>O cuidado ideal para se ter com sua pele 
                         está nessa combinação poderosa.
@@ -57,7 +57,7 @@
                     </p>
                 </div>
                 <div class="bloco3">
-                    <img src="contents/bodysplash.png" alt="">
+                    <img src="https://p1-web.github.io/prova-p1/contents/bodysplash.png" alt="">
                     <h3>Body splash</h3>
                     <p>O cuidado ideal para se ter com sua pele 
                         está nessa combinação poderosa.
