--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
                     <h1>MAIS VENDIDOS</h1>
                 </div>
                 <div class="bloco1">
-                    <img src="/https://p1-web.github.io/prova-p1/contents/shampoconditioner.png" alt="">
+                    <img src="https://p1-web.github.io/prova-p1/contents/shampoconditioner.png" alt="">
                     <h3>Kit shampoo + condicionador </h3>
                     <p>O cuidado ideal para se ter com sua pele está nessa combinação poderosa. Um creme acetinado e um body splash produzidos com a melhor formulação do mercado.
                     </p>
