--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="barrasuperio"></div>
         <div class="logo">
-            <img src="/contents/logo.png" alt="">
+            <img src="https://p1-web.github.io/prova-p1/home.html/contents/logo.png" alt="">
         </div>
         <div class="menu">
           <div class="opt">
