--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -14,14 +14,14 @@
         <div class="barrasuperio"></div>
         <div class="logo">
             <a href="/home.html">
-                <img src="/contents/logo.png" alt="" id="home">
+                <img src="https://p1-web.github.io/prova-p1/contents/logo.png" alt="" id="home">
               </a>
             
         </div>
         <div class="menu">
           <div class="opt">
-            <p><a href="/pages/produtos.html">produtos</a></p>
-            <p><a href="/pages/contato.html" target="_blank">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/produtos.html">produtos</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html" target="_blank">contato</a></p>
             <p>sobre</p>
           </div>
           <div class="search">
