--- a/home.html
+++ b/home.html
@@ -13,13 +13,13 @@
     <div class="container">
         <div class="barrasuperio"></div>
         <div class="logo">
-            <img src="https://p1-web.github.io/prova-p1/home.html/contents/logo.png" alt="">
+            <img src="https://p1-web.github.io/prova-p1/contents/logo.png" alt="">
         </div>
         <div class="menu">
           <div class="opt">
-            <p><a href="/pages/produtos.html">produtos</a></p>
-            <p><a href="/pages/contato.html" target="_blank">contato</a></p>
-            <p><a href="/pages/sobre.html">sobre</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/produtos.html">produtos</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html" target="_blank">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/sobre.html">sobre</a></p>
           </div>
           <div class="search">
             <span class="material-icons " style="background-color: transparent; padding-top: 1%;color: #72383D;" >search</span>
