--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="barrasuperio"></div>
         <div class="logo">
-            <a href="/home.html">
+            <a href="https://p1-web.github.io/prova-p1/home.html">
                 <img src="https://p1-web.github.io/prova-p1/contents/logo.png" alt="" id="home">
               </a>
             
