--- a/home.html
+++ b/home.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Venue - Cosmetics</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="/contents/logo.png" />
+    <link rel="stylesheet" href="https://p1-web.github.io/prova-p1/css/style.css">
+    <link rel="icon" href="https://p1-web.github.io/prova-p1/contents/logo.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="barrasuperio"></div>
         <div class="logo">
-            <img src="/contents/logo.png" alt="">
+            <img src="https://p1-web.github.io/prova-p1/contents/logo.png" alt="">
         </div>
         <div class="menu">
           <div class="opt">
-            <p><a href="/pages/produtos.html">produtos</a></p>
-            <p><a href="/pages/contato.html" target="_blank">contato</a></p>
-            <p><a href="/pages/sobre.html">sobre</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/produtos.html">produtos</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html" target="_blank">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/sobre.html">sobre</a></p>
           </div>
           <div class="search">
             <span class="material-icons " style="background-color: transparent; padding-top: 1%;color: #72383D;" >search</span>
@@ -28,7 +28,7 @@
         </div>
         <div class="main">
             <div class="sub-container">
-                <img src="/contents/mocahome.png" class="resposiveIMG">
+                <img src="https://p1-web.github.io/prova-p1/contents/mocahome.png" class="resposiveIMG">
                 <div class="sub-container">
                     <div class="sub">
                         <p class="title">Descubra a sua nova versão!</p>
@@ -41,13 +41,13 @@
                     <h1>MAIS VENDIDOS</h1>
                 </div>
                 <div class="bloco1">
-                    <img src="contents/shampoconditioner.png" alt="">
+                    <img src="https://p1-web.github.io/prova-p1/contents/shampoconditioner.png" alt="">
                     <h3>Kit shampoo + condicionador </h3>
                     <p>O cuidado ideal para se ter com sua pele está nessa combinação poderosa. Um creme acetinado e um body splash produzidos com a melhor formulação do mercado.
                     </p>
                 </div>
                 <div class="bloco2">
-                    <img src="contents/facialcream.png" alt="">
+                    <img src="https://p1-web.github.io/prova-p1/contents/facialcream.png" alt="">
                     <h3>Creme facial com ácido hialurônico </h3>
                     <p>O cuidado ideal para se ter com sua pele 
                         está nessa combinação poderosa.
@@ -57,7 +57,7 @@
                     </p>
                 </div>
                 <div class="bloco3">
-                    <img src="contents/bodysplash.png" alt="">
+                    <img src="https://p1-web.github.io/prova-p1/contents/bodysplash.png" alt="">
                     <h3>Body splash</h3>
                     <p>O cuidado ideal para se ter com sua pele 
                         está nessa combinação poderosa.
@@ -71,11 +71,11 @@
         <div class="footer">
             <p>Politicas de privacidade  |  Termos de uso</p>
             <div>
-                <img  src="/contents/icons8-facebook-48.png" style="filter: invert(100%)">
+                <img  src="https://p1-web.github.io/prova-p1/contents/icons8-facebook-48.png" >
             
-                <img src="/contents/icons8-instagram-80.png" style="filter: invert(100%)">
+                <img src="https://p1-web.github.io/prova-p1/contents/icons8-instagram-80.png" >
             
-                <img src="/contents/icons8-twitter-80.png" style="filter: invert(100%)">
+                <img src="https://p1-web.github.io/prova-p1/contents/icons8-twitter-80.png" >
             </div>
         </div>
       </div>
