--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -11,8 +11,11 @@
 <body>
     <div class="container">
         <div class="barrasuperio"></div>
-        <div class="logo">
-            <img src="https://p1-web.github.io/prova-p1/contents/logo.png" alt="">
+         <div class="logo">
+            <a href="https://p1-web.github.io/prova-p1/home.html">
+                <img src="https://p1-web.github.io/prova-p1/contents/logo.png" alt="" id="home">
+              </a>
+            
         </div>
         <div class="menu">
           <div class="opt">
