--- a/pages/contato.html
+++ b/pages/contato.html
@@ -22,6 +22,7 @@
           <div class="opt">
             <p><a href="https://p1-web.github.io/prova-p1/pages/produtos.html">produtos</a></p>
             <p>contato</p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/projetos.html">projetos</a></p>
             <p><a href="https://p1-web.github.io/prova-p1/pages/sobre.html">sobre</a></p>
           </div>
           <div class="search">
