--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -21,7 +21,8 @@
         <div class="menu">
           <div class="opt">
             <p>produtos</p>
-            <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html" target="_blank">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/projetos.html">projetos</a></p>
             <p><a href="https://p1-web.github.io/prova-p1/pages/sobre.html">sobre</a></p>
            
           </div>
