--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -21,7 +21,8 @@
         <div class="menu">
           <div class="opt">
             <p><a href="https://p1-web.github.io/prova-p1/pages/produtos.html">produtos</a></p>
-            <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html" target="_blank">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/projetos.html">projetos</a></p>
             <p>sobre</p>
           </div>
           <div class="search">
