--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
           <div class="opt">
             <p><a href="https://p1-web.github.io/prova-p1/pages/produtos.html">produtos</a></p>
             <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html" target="_blank">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/projetos.html">projetos</a></p>
             <p><a href="https://p1-web.github.io/prova-p1/pages/sobre.html">sobre</a></p>
           </div>
           <div class="search">
