--- a/pages/contato.html
+++ b/pages/contato.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos - La Venue</title>
     <link rel="stylesheet" href="https://p1-web.github.io/prova-p1/css/style.css">
+    <link rel="icon" href="https://p1-web.github.io/prova-p1/contents/logo.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
 <body>
@@ -21,6 +22,7 @@
           <div class="opt">
             <p><a href="https://p1-web.github.io/prova-p1/pages/produtos.html">produtos</a></p>
             <p>contato</p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/projetos.html">projetos</a></p>
             <p><a href="https://p1-web.github.io/prova-p1/pages/sobre.html">sobre</a></p>
           </div>
           <div class="search">
