--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos - La Venue</title>
     <link rel="stylesheet" href="https://p1-web.github.io/prova-p1/css/style.css">
+    <link rel="icon" href="https://p1-web.github.io/prova-p1/contents/logo.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
 <body>
@@ -20,7 +21,8 @@
         <div class="menu">
           <div class="opt">
             <p>produtos</p>
-            <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html" target="_blank">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/contato.html">contato</a></p>
+            <p><a href="https://p1-web.github.io/prova-p1/pages/projetos.html">projetos</a></p>
             <p><a href="https://p1-web.github.io/prova-p1/pages/sobre.html">sobre</a></p>
            
           </div>
